--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="image">
-                        <img src="/assets/1.png">
+                        <img src="assets/1.jpg">
                 </div>
 
                 <!-- mobile view card item-->
