--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <label class="logo"> Portfollio </label>
                 <ul class="menuOption">
                         <li>
-                                <a href="#home" onclick="menuBar()">Home</a>
+                                <a href="#home" onclick="menuBar()">Home()</a>
                         </li>
                         <li>
-                                <a href="#project" onclick="menuBar()">Project</a>
+                                <a href="#project" onclick="menuBar()">Projects()</a>
                         </li>
                         <li>
-                                <a href="#achievement" onclick="menuBar()">Achievement</a>
+                                <a href="#achievement" onclick="menuBar()">Achievement()</a>
                         </li>
                         <li>
-                                <a href="#contact" onclick="menuBar()">Contact</a>
+                                <a href="#contact" onclick="menuBar()">Contact()</a>
                         </li>
                 </ul>
         </nav>
@@ -89,10 +89,71 @@
 
         </div>
         <!-- end Home section-->
-
+        <!-- Project section-->
         <div class="project" id="project">
-                <div class="project"></div>
+                <div class="bigscreen">
+                        <h1>@Projects</h1>
+                        <div class="line">
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2>Title</h2><a href="#">See---></a>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                </p>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
         </div>
+        <!-- Project section end-->
 </body>
 
 </html>
