--- a/index.html
+++ b/index.html
@@ -96,57 +96,94 @@
                         <div class="line">
                                 <div class="container left">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
+                                                <h2><a href="#">P-H-Y-Wifi</a></h2>
+                                                <p>P-H-Y-Wifi is <b>Shell</b> script based tool.This tool will help to
+                                                        analyze and test the security of wireless network with the help
+                                                        of <b>Aircrack-ng</b>.</p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>shell</li>
+                                                                <li>Aircrack-ng</li>
+                                                                <li>Airodumb-ng</li>
+                                                        </ul>
+                                                </ul>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
+                                                <h2><a href="#">Local to Air</a></h2>
+                                                <p>This tool will help to share your local files to remote user with the
+                                                        help of <b>ngrok</b> tunneling.Also you can host your static or
+                                                        dynamic (PHP) websites with help of this tool. </p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>shell</li>
+                                                                <li>ngrok</li>
+                                                        </ul>
+                                                </ul>
                                         </div>
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
+                                                <h2><a href="#">Easy-Phishing</a></h2>
+                                                <p>Fake Phishing pages for <b>Instagram</b>,<b>Twitter</b>,<b>Facebook</b> and <b>Gmail</b> This tool is educational purpose.This tool available in (CLI/GUI) both mode.</p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>HTML</li>
+                                                                <li>CSS</li>
+                                                                <li>PHP</li>
+                                                                <li>shell</li>
+                                                        </ul>
+                                                </ul>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
+                                                <h2><a href="#">Subdomain-Takeover</a></h2>
+                                                <p>This tool will help to find vulnerable subdomains (for subdomain takeover vulnerability) based on subdomain's response body.</p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>Python</li>
+                                                        </ul>
+                                                </ul>
                                         </div>
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
+                                                <h2><a href="#">Utube-downloader</a> </h2>
+                                                <p>Download your favorite youtube videos with this script!</p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>Python</li>
+                                                        </ul>
+                                                </ul>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
+                                                <h2><a href="#">PY-CTF</a></h2>
+                                                <p>This game have some common real world vulnerability to exploit. Example : <b>Stored-XSS</b>,<b>Account Takeover</b>,<b>Image Meta data extraction</b> and <b>etc...</b></p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>Flask</li>
+                                                                <li>Python</li>
+                                                                <li>HTML</li>
+                                                                <li>CSS</li>
+                                                        </ul>
+                                                </ul>
+
                                         </div>
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
-                                                </p>
-                                        </div>
-                                </div>
-                                <div class="container right">
-                                        <div class="content">
-                                                <h2>Title</h2><a href="#">See---></a>
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut saepe iste vel culpa in accusantium ducimus recusandae cumque laudantium nesciunt ullam sit doloremque, non voluptatibus alias impedit. Aspernatur, neque alias!
+                                                <h2><a href="#">Comming soon...</a></h2>
+                                                <p>
                                                 </p>
                                         </div>
                                 </div>
