achivement and contact page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="checkbtn">
                         <i class="fa fa-bars" onclick="menuBar()"></i>
                 </div>
-                <label class="logo"> Portfollio </label>
+                <label class="logo"> <span>Portfollio</span> </label>
                 <ul class="menuOption">
                         <li>
                                 <a href="#home" onclick="menuBar()">Home()</a>
@@ -41,58 +41,46 @@
         <!-- Home section-->
         <div class="home" id="home">
                 <div class="bigscreen">
-                        <div class="content">
-                                <div class="intro">
-                                        <h3>Hello there,</h3>
-                                        <br />
-                                        <h1>
-                                                I'M
-                                                <span>Yuvaraj (@Mr_3rr0r_501)</span>
-                                        </h1>
-                                        <div class="description">
-                                                <p>
-                                                        <b>Software developer</b> and <b>Bug bounty hunter.</b> I
-                                                        secured Zoom,zerocopter,N26 and more...
-                                                </p>
+                        <h1><span>@Home</span></h1>
+                        <div class="line">
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2><a>Name ?</a></h2>
                                         </div>
-                                        <div class="resume-btn">
-                                                <a id="resume-btn" href="#resume" onmouseenter="changeEye()"
-                                                        onmouseleave="changeEye()">Resume <i class="fa-solid"></i></a>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a><span>Yuvaraj (@Mr_3rr0r_501)</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2><a>Who I'm ?</a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a><span>Software Developer / Bug bounty hunter</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2><a>What i Done ?</a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a><span>Secured into Zoom, Zerocopter, N26 and etc...</span></a></h2>
                                         </div>
                                 </div>
                         </div>
                 </div>
-
-                <div class="image">
-                        <img src="assets/1.jpg">
-                </div>
-
-                <!-- mobile view card item-->
-                <div class="card">
-                        <div class="card-header">
-                                <div class="card-header-slanted-edge">
-                                </div>
-                        </div>
-                        <div class="card-body">
-                                <h2 class="name">Yuvaraj</h2>
-                                <h3 class="aka-name">(@Mr_3rr0r_501)</h3>
-                                <h4 class="job-title">Software developer/Bug Hunter</h4>
-                                <div class="bio">I secured into Zoom, zerocopter, N26 and more...</div>
-                        </div>
-                        <div class="resume-btn">
-                                <a id="resume-btn" href="#resume" onmouseenter="changeEye()"
-                                        onmouseleave="changeEye()">Resume <i class="fa-solid"></i></a>
-                        </div>
-                </div>
-
-                <!-- Mobile view card item end-->
-
         </div>
         <!-- end Home section-->
         <!-- Project section-->
         <div class="project" id="project">
                 <div class="bigscreen">
-                        <h1>@Projects</h1>
+                        <h1><span>@Projects</span></h1>
                         <div class="line">
                                 <div class="container left">
                                         <div class="content">
@@ -128,7 +116,10 @@
                                 <div class="container left">
                                         <div class="content">
                                                 <h2><a href="#">Easy-Phishing</a></h2>
-                                                <p>Fake Phishing pages for <b>Instagram</b>,<b>Twitter</b>,<b>Facebook</b> and <b>Gmail</b> This tool is educational purpose.This tool available in (CLI/GUI) both mode.</p>
+                                                <p>Fake Phishing pages for
+                                                        <b>Instagram</b>,<b>Twitter</b>,<b>Facebook</b> and <b>Gmail</b>
+                                                        This tool is educational purpose.This tool available in
+                                                        (CLI/GUI) both mode.</p>
                                                 <ul style="list-style: none;">
                                                         <li><b>Build with:</b></li>
                                                         <ul>
@@ -143,7 +134,8 @@
                                 <div class="container right">
                                         <div class="content">
                                                 <h2><a href="#">Subdomain-Takeover</a></h2>
-                                                <p>This tool will help to find vulnerable subdomains (for subdomain takeover vulnerability) based on subdomain's response body.</p>
+                                                <p>This tool will help to find vulnerable subdomains (for subdomain
+                                                        takeover vulnerability) based on subdomain's response body.</p>
                                                 <ul style="list-style: none;">
                                                         <li><b>Build with:</b></li>
                                                         <ul>
@@ -167,7 +159,9 @@
                                 <div class="container right">
                                         <div class="content">
                                                 <h2><a href="#">PY-CTF</a></h2>
-                                                <p>This game have some common real world vulnerability to exploit. Example : <b>Stored-XSS</b>,<b>Account Takeover</b>,<b>Image Meta data extraction</b> and <b>etc...</b></p>
+                                                <p>This game have some common real world vulnerability to exploit.
+                                                        Example : <b>Stored-XSS</b>,<b>Account Takeover</b>,<b>Image
+                                                                Meta data extraction</b> and <b>etc...</b></p>
                                                 <ul style="list-style: none;">
                                                         <li><b>Build with:</b></li>
                                                         <ul>
@@ -182,6 +176,22 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
+                                                <h2><a href="#">ARP-Spoofing Detection and Prevension</a></h2>
+                                                <p>ARP-Spoofing detection script having automated Detection and
+                                                        Prevension modules. It continuesly Monitering router's client
+                                                        Entry table and found ARP-Spoofing attack it automatically find
+                                                        attacker and kickout attacker form that network.</p>
+                                                <ul style="list-style: none;">
+                                                        <li><b>Build with:</b></li>
+                                                        <ul>
+                                                                <li>Python</li>
+                                                                <li>Aircrack-ng</li>
+                                                        </ul>
+                                                </ul>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
                                                 <h2><a href="#">Comming soon...</a></h2>
                                                 <p>
                                                 </p>
@@ -191,6 +201,113 @@
                 </div>
         </div>
         <!-- Project section end-->
+        <!-- Achievement section-->
+        <div class="achievement" id="achievement">
+                <div class="bigscreen">
+                        <h1><span>@Achievements</span></h1>
+                        <div class="line">
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2><a>Thanked By | Hall of Fame</a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a href="https://hackerone.com/replyify/thanks">Replyify -<span> Top
+                                                                7<sup>th</sup> by Hackerone</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a href="https://hackerone.com/top_echelon_software/thanks">Top
+                                                                Echelon software -<span> Top 8<sup>th</sup> by Hackerone</span></a></h2>
+                                        </div> 
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a href="https://hackerone.com/expressionengine/thanks">Expression
+                                                                Engine - <span>Top 24<sup>th</sup> by Hackerone</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a href="https://www.hindawi.com/responsible-disclosure-policy/">Hindawi <span>by VDP</span></a>
+                                                </h2>
+                                        </div>
+                                </div>
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2><a>Bug-Bounty</a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a>Zoom <span>by Hackerone</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a>N26 <span>by Hackerone</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a>Zerocopter <span>by Zerocopter</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a>stomets.berline <span>by Zerocopter</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a>Tyk.io <span>by Zerocopter</span></a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a>Routescanner.com <span>by Zerocopter</span></a></h2>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </div>
+        <!-- Achievement section end -->
+        <!-- Contact section -->
+        <div class="contact" id="contact">
+                <div class="bigscreen">
+                        <h1><span>@Contact</span></h1>
+                        <div class="line">
+                                <div class="container left">
+                                        <div class="content">
+                                                <h2><a>Say Hi to me 👋</a></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><input type="text" name="name" placeholder="Name"></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><input type="email" name="email" placeholder="Email"></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><input type="text" name="msg" placeholder="Message"></h2>
+                                        </div>
+                                </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><button>Say Hi 👋</button></h2>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </div>
+        <!-- contact section end -->
 </body>
 
 </html>
