--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">Comming soon...</a></h2>
+                                                <h2><a href="#">More comming soon...</a></h2>
                                                 <p>
                                                 </p>
                                         </div>
@@ -235,6 +235,11 @@
                                                 </h2>
                                         </div>
                                 </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a href="#">More In-Progress...</a></h2>
+                                        </div>
+                                </div>
                                 <div class="container left">
                                         <div class="content">
                                                 <h2><a>Bug-Bounty</a></h2>
@@ -270,6 +275,11 @@
                                                 <h2><a>Routescanner.com <span>by Zerocopter</span></a></h2>
                                         </div>
                                 </div>
+                                <div class="container right">
+                                        <div class="content">
+                                                <h2><a href="#">More In-Progress...</a></h2>
+                                        </div>
+                                </div>
                         </div>
                 </div>
         </div>
@@ -286,22 +296,22 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="text" name="name" placeholder="Name"></h2>
+                                                <h2><input type="text" name="name" placeholder="Name" id="name"></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="email" name="email" placeholder="Email"></h2>
+                                                <h2><input type="email" name="email" placeholder="Email" id="email"></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="text" name="msg" placeholder="Message"></h2>
+                                                <h2><input type="text" name="msg" placeholder="Message" id="msg"></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><button>Say Hi 👋</button></h2>
+                                                <h2><button id="sayHi" onclick="sendHi()">Say Hi 👋</button></h2>
                                         </div>
                                 </div>
                         </div>
