--- a/index.html
+++ b/index.html
@@ -296,17 +296,17 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="text" name="name" placeholder="Name" id="name"></h2>
+                                                <h2><input type="text" name="name" placeholder="Name" id="name" required></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="email" name="email" placeholder="Email" id="email"></h2>
+                                                <h2><input type="email" name="email" placeholder="Email" id="email" required></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="text" name="msg" placeholder="Message" id="msg"></h2>
+                                                <h2><input type="text" name="msg" placeholder="Message" id="msg" required></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
